syntax = "proto3";

package WompattiService;

message WakeupRequest {
	uint32 computerId = 1;
}